--- a/package.json
+++ b/package.json
@@ -2,11 +2,32 @@
   "name": "tare",
   "version": "1.0.0",
   "description": "The platform-agnostic test framework",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "main": "dist/index.cjs",
+  "module": "dist/index.js",
+  "source": "src/index.ts",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist/**"
+  ],
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
+    }
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "scripts": {
+    "build": "tsup src/index.ts --format cjs,esm --dts",
+    "test": ""
+  },
+  "keywords": [
+    "test",
+    "bare"
+  ],
+  "author": "Tu Phan <tu.phan@tether.io>",
+  "license": "MIT",
+  "devDependencies": {
+    "tsup": "^8.5.0",
+    "typescript": "^5.9.2"
+  }
 }
