feat: structure assert and expect

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "scripts": {
     "build": "tsup src/index.ts --clean --format cjs,esm --dts --sourcemap",
     "pretest": "npm run build && tsup tests/**/*.ts --clean --silent --external tare --format cjs --out-dir tmp",
-    "test": "node ./tmp/unit.test.js"
+    "test": "node ./tmp/equal.test.js"
   },
   "keywords": [
     "test",
