feat: support bare

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "scripts": {
     "build": "tsup src/index.ts --clean --format cjs,esm --dts --sourcemap",
     "pretest": "npm run build && tsup tests/**/*.ts --clean --silent --external tare --format cjs --out-dir tmp",
-    "test": "bare ./tmp/ok.test.js"
+    "test": "TARE_MAIN_ID=0 bare ./tmp/ok.test.js"
   },
   "keywords": [
     "test",
