chore: config npm

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "source": "src/index.ts",
   "types": "dist/index.d.ts",
   "files": [
-    "dist/**"
+    "dist/**",
+    "bin/**",
+    "cli.js"
   ],
   "imports": {
     "process": {
