--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
   "scripts": {
     "build": "tsup src/index.ts --clean --format cjs,esm --dts --sourcemap",
     "pretest": "npm run build && tsup tests/**/*.ts --clean --silent --external noba --format cjs --out-dir tmp",
-    "test": "NOBA_MAIN_ID=0 bare ./tmp/ok.test.js"
+    "test": "NOBA_MAIN_ID=0 bare ./tmp/ok.test.js",
+    "ci:release": "semantic-release"
   },
   "keywords": [
     "test",
@@ -45,14 +46,22 @@
   ],
   "author": "Tu Phan <tu.phan@tether.io>",
   "license": "MIT",
+  "repository": "git@github.com:sontuphan/tare.git",
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
+  },
   "dependencies": {
     "bare-process": "^4.2.1",
     "bare-subprocess": "^5.1.2",
     "paparam": "^1.8.6"
   },
   "devDependencies": {
+    "@semantic-release/exec": "^7.1.0",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^11.0.6",
     "@types/node": "^24.5.0",
-    "bare": "^1.22.0",
+    "semantic-release": "^24.2.8",
     "tsup": "^8.5.0",
     "typescript": "^5.9.2"
   }
