--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Test
         run: |
           npm run pretest
-          noba ./tmp/*.test.js
+          noba ./tmp/**/*.test.js
   release:
     if: github.event_name == 'push' || github.event.pull_request.merged == true
     needs: test
