feat: support throws and rejects

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "scripts": {
     "build": "tsup src/index.ts --clean --format cjs,esm --dts --sourcemap",
     "pretest": "npm run build && tsup tests --clean --silent --external noba --format cjs --out-dir tmp",
-    "test": "NOBA_MAIN_ID=0 bare ./tmp/each.test.js",
+    "test": "NOBA_MAIN_ID=0 bare ./tmp/all.test.js",
     "ci:release": "semantic-release"
   },
   "keywords": [
