--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   },
   "scripts": {
     "build": "tsup src/index.ts --clean --format cjs,esm --dts --sourcemap",
-    "pretest": "npm run build && tsup tests --clean --silent --external noba --format cjs --out-dir tmp",
+    "pretest": "npm run build && tsup-node tests --clean --silent --format cjs --sourcemap --out-dir tmp",
     "test": "NOBA_MAIN_ID=0 node ./tmp/all.test.js",
     "ci:release": "semantic-release"
   },
@@ -61,7 +61,8 @@
     "bare-process": "^4.2.1",
     "bare-subprocess": "^5.1.2",
     "c8": "^10.1.3",
-    "paparam": "^1.8.6"
+    "paparam": "^1.8.6",
+    "tinyspy": "^4.0.4"
   },
   "devDependencies": {
     "@semantic-release/exec": "^7.1.0",
