--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,12 +28,11 @@ jobs:
         run: |
           npm run build
           npm link
-      - name: Test
-        run: |
           npm run pretest
-          pwd
-          ls
-          noba ./tmp/**/*.test.js
+      - name: Test in Node
+        run: noba ./tmp/**/*.test.js
+      - name: Test in Bare
+        run: noba-bare ./tmp/**/*.test.js
   release:
     if: github.event_name == 'push' || github.event.pull_request.merged == true
     needs: test
