--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,6 +12,7 @@ on:
 
 env:
   NODE_VERSION: 22
+  BARE_VERSION: 1.22
 
 jobs:
   test:
@@ -23,7 +24,7 @@ jobs:
         with:
           node-version: ${{ env.NODE_VERSION }}
       - name: Setup Bare
-        run: npm i -g bare
+        run: npm i -g bare@${{ env.BARE_VERSION }}
       - name: Install dependencies
         run: npm install
       - name: Build & Link
