--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,11 +27,10 @@ jobs:
         run: npm i -g bare@${{ env.BARE_VERSION }}
       - name: Install dependencies
         run: npm install
-      - name: Build & Link
-        run: |
-          npm run build
-          npm link
-          npm run pretest
+      - name: Pretest
+        run: npm run pretest
+      - name: Link
+        run: npm link
       - name: Test in Node
         run: noba ./tmp/**/*.test.js
       - name: Test in Bare
