refactor: reduce the context-based calculation in mockings

--- a/package.json
+++ b/package.json
@@ -36,6 +36,10 @@
     "fs": {
       "bare": "bare-fs",
       "default": "fs"
+    },
+    "url": {
+      "bare": "bare-url",
+      "default": "url"
     }
   },
   "exports": {
@@ -76,6 +80,7 @@
     "bare-subprocess": "^5.1.2",
     "bare-url": "^2.2.2",
     "c8": "^10.1.3",
+    "esmock": "^2.7.3",
     "paparam": "^1.8.6",
     "tinyspy": "^4.0.4"
   },
