--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "bare-url": "^2.2.2",
     "c8": "^10.1.3",
     "esmock": "^2.7.3",
+    "import-meta-resolve": "^4.2.0",
     "paparam": "^1.8.6",
     "tinyspy": "^4.0.4"
   },
