--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "registry": "https://registry.npmjs.org/"
   },
   "dependencies": {
+    "acorn": "^8.15.0",
     "bare": "^1.22.0",
     "bare-cov": "^1.1.2",
     "bare-fs": "^4.4.4",
@@ -85,6 +86,7 @@
     "bare-subprocess": "^5.1.2",
     "bare-url": "^2.2.2",
     "c8": "^10.1.3",
+    "escodegen": "^2.1.0",
     "esmock": "^2.7.3",
     "import-meta-resolve": "^4.2.0",
     "paparam": "^1.8.6",
@@ -95,8 +97,10 @@
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^11.0.6",
     "@types/asciichart": "^1.5.8",
+    "@types/escodegen": "^0.0.10",
     "@types/node": "^24.5.0",
     "asciichart": "^1.5.25",
+    "rimraf": "^6.0.1",
     "semantic-release": "^24.2.8",
     "tsup": "^8.5.0",
     "typescript": "^5.9.2"
