ci: not run wiki on unrelated files

--- a/.github/workflows/wiki.yml
+++ b/.github/workflows/wiki.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - develop
+    paths:
+      - wiki/*
+      - .github/workflows/wiki.yml
 
 permissions:
   contents: write
@@ -13,4 +16,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: Andrew-Chen-Wang/github-wiki-action@v4
+      - name: Update Wiki
+        uses: Andrew-Chen-Wang/github-wiki-action@v4
