--- a/.github/workflows/wiki.yml
+++ b/.github/workflows/wiki.yml
@@ -5,8 +5,8 @@ on:
     branches:
       - develop
     paths:
-      - ./wiki/*
-      - ./.github/workflows/wiki.yml
+      - 'wiki/*'
+      - '.github/workflows/wiki.yml'
 
 permissions:
   contents: write
