--- a/package.json
+++ b/package.json
@@ -61,9 +61,9 @@
     "prebuild": "rimraf dist",
     "build": "tsup",
     "pretest": "tsup-node tests --clean --silent --format esm --out-dir dist/tests",
-    "test": "noba ./dist/tests/**/*.test.js",
+    "test": "noba --globalSetup ./dist/tests/globals/setup.js --globalTeardown ./dist/tests/globals/teardown.js ./dist/tests/**/*.test.js",
     "pretest:bare": "npm run pretest",
-    "test:bare": "noba-bare ./dist/tests/**/*.test.js",
+    "test:bare": "noba-bare --globalSetup ./dist/tests/globals/setup.js --globalTeardown ./dist/tests/globals/teardown.js ./dist/tests/**/*.test.js",
     "ci:release": "semantic-release"
   },
   "keywords": [
