--- a/package.json
+++ b/package.json
@@ -80,13 +80,13 @@
   },
   "dependencies": {
     "acorn": "^8.15.0",
-    "bare": "^1.22.0",
+    "bare": "^1.23.5",
     "bare-cov": "^1.2.0",
-    "bare-fs": "^4.4.4",
-    "bare-module": "^5.0.3",
-    "bare-process": "^4.2.1",
-    "bare-subprocess": "^5.1.2",
-    "bare-url": "^2.2.2",
+    "bare-fs": "^4.4.11",
+    "bare-module": "6.0.1",
+    "bare-process": "^4.2.2",
+    "bare-subprocess": "^5.1.4",
+    "bare-url": "^2.3.0",
     "c8": "^10.1.3",
     "escodegen": "^2.1.0",
     "esmock": "^2.7.3",
